test/errors/invalid_decls.aw
function unknown_keyword() {
	var x = 1
	var y = 1
	x = x + y
	y = x + y
	x = x + y
}

func f()
{
	return 1;
}
